tests/negative/neg_pr1162_removed_aliased.safe
package neg_pr1162_removed_aliased

   value : aliased integer = 1
